--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Donation</string>
     <string name="action_settings">Settings</string>
+    <string name="reportTitle">Report</string>
     <string name="menuReport">Report</string>
     <string name="donateTitle">Welcome Homer</string>
     <string name="donateSubtitle">Please give generously</string>
