--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
     <string name="app_name">Donation</string>
     <string name="action_settings">Settings</string>
     <string name="reportTitle">Report</string>
+    <string name="amount">Amount</string>
+    <string name="initialAmount"></string>
+    <string name="amountSoFarLabel">Total so far:</string>
     <string name="menuReport">Report</string>
     <string name="donateTitle">Welcome Homer</string>
     <string name="donateSubtitle">Please give generously</string>
