--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="amount">Amount</string>
     <string name="initialAmount"></string>
     <string name="amountSoFarLabel">Total so far:</string>
+    <string name="defaultAmount">00</string>
+    <string name="defaultMethod">N/A</string>
     <string name="menuReport">Report</string>
     <string name="donateTitle">Welcome Homer</string>
     <string name="donateSubtitle">Please give generously</string>
