--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,10 +7,13 @@
     <string name="amountSoFarLabel">Total so far:</string>
     <string name="defaultAmount">00</string>
     <string name="defaultMethod">N/A</string>
+    <string name="menuDonate">Donate</string>
     <string name="menuReport">Report</string>
     <string name="donateTitle">Welcome Homer</string>
     <string name="donateSubtitle">Please give generously</string>
     <string name="donateButton">Donate</string>
+    <string name="welcomeLogin">Login</string>
+    <string name="welcomeSignup">Sign up</string>
     <string name="PayPal">PayPal</string>
     <string name="Direct">Direct</string>
 </resources>
